# Enterprise-Rag

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data/: README.md
data/real_world/finance_reports/: audit_guidelines.txt  financial_controls.txt  investment_policy.txt
data/real_world/hr_policies/: benefits_overview.txt  compliance_summary.txt  employee_policy.txt
data/real_world/pharma_regulations/: clinical_trial_protocol.txt  drug_safety_protocols.txt  fda_reporting_requirements.txt
deployment/: README.md
docs/: README.md
docs/architecture/: OVERVIEW.md
docs/best_practices/: PRODUCTION.md
docs/guides/: GETTING_STARTED.md
evaluation/: README.md
examples/: README.md
examples/basic_rag/: README.md  config_example.yaml  run_pipeline.py  sample_output.txt
examples/basic_rag/sample_docs/: health_benefits.txt  professional_development.txt  remote_work.txt  vacation_policy.txt
examples/compliance_rag/: README.md  config_example.yaml  run_pipeline.py  sample_output.txt
examples/enterprise_rag/: README.md  config_example.yaml  run_pipeline.py  sample_output.txt
infrastructure/: README.md
scripts/: README.md
scripts/data_generation/: generate_real_world_docs.py
src/: README.md
